--- a/loansapp/amplify/backend/backend-config.json
+++ b/loansapp/amplify/backend/backend-config.json
@@ -22,5 +22,13 @@
       "service": "S3AndCloudFront",
       "providerPlugin": "awscloudformation"
     }
+  },
+  "auth": {
+    "loansapp031ca966": {
+      "service": "Cognito",
+      "providerPlugin": "awscloudformation",
+      "dependsOn": [],
+      "customAuth": false
+    }
   }
 }
